--- a/public/index.html
+++ b/public/index.html
@@ -678,6 +678,7 @@
                 <a href="https://t.me/cooker0910_j" class="social"><i class="bi bi-telegram"></i></a>
                 <a href="https://join.skype.com/invite/wZERri6MkOpj" class="social"><i class="bi bi-skype"></i></a>
                 <a href="https://github.com/cooker0910" class="social"><i class="bi bi-github"></i></a>
+                <a href="mailto:cooker98910@gmail.com" class="social"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
           </div>
