--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kenneth Jean</title>
+  <title>Kaspar Jindrich</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,8 +46,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <div class="d-flex flex-column align-items-center justify-content-center">
-      <h1>Hi, I'm Kenneth Jean!</h1>
-      <h2>Blockchain & Full stack Web Developer</h2>
+      <h1>Hi, I'm Kaspar Jindrich!</h1>
+      <h2>Full stack & Blockchain Developer</h2>
       <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -57,7 +57,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index-2.html">Kenneth Jean</a></h1>
+        <h1><a href="index-2.html">Kaspar Jindrich</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -310,7 +310,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Kenneth Jean</h4>
+              <h4>Kaspar Jindrich</h4>
               <p><em>Expert in software development with 7 years of contributions in various projects.</em></p>
               <p>I strive to focus on the delivery of high-quality products and work.</p>
               <p>I think that an employee's honesty is an important as one's skill, in hiring and building
@@ -669,7 +669,7 @@
 
           <div class="col-lg-12 col-md-12">
             <div class="contact-about">
-              <h3>Kenneth Jean</h3>
+              <h3>Kaspar Jindrich</h3>
               <p></p>
               <div class="social-links">
                 <a href="https://www.linkedin.com/in/crypto-cooker/" class="social"><i class="bi bi-linkedin"></i></a>
@@ -688,7 +688,7 @@
             <div class="info">
               <div class="d-flex align-items-center">
                 <i class="bi bi-geo-alt"></i>
-                <p>Ottawa, ON K1N 7P7 Canada</p>
+                <p>Detlev-Bremer-Straße 12, 20359 Hamburg, Germany</p>
               </div>
               <div class="d-flex align-items-center mt-4">
                 <i class="bi bi-phone"></i>
@@ -701,7 +701,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1978.341712015107!2d-75.67934928397896!3d45.421852002193745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0509a693a343%3A0x6922e1c56265e423!2s159%20Henderson%20Ave%2C%20Ottawa%2C%20ON%20K1N%207P7%2C%20Canada!5e1!3m2!1sen!2sus!4v1655828560739!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d469.8908810291488!2d9.964962944651868!3d53.55264390000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18f6c4c66f3bd%3A0x2cb01678edc21ce5!2sDetlev-Bremer-Stra%C3%9Fe%2012%2C%2020359%20Hamburg%2C%20Germany!5e1!3m2!1sen!2shk!4v1656863340703!5m2!1sen!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
 
@@ -714,7 +714,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kenneth Jean</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Kaspar Jindrich</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End  Footer -->
