--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from ericchan.netlify.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jun 2022 15:22:53 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
   <meta charset="utf-8">
@@ -391,55 +388,7 @@
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
-
-
-    <!-- <section id="services" class="services section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
     </section>
-    <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
@@ -678,7 +627,7 @@
                 <a href="https://t.me/cooker0910_j" class="social"><i class="bi bi-telegram"></i></a>
                 <a href="https://join.skype.com/invite/wZERri6MkOpj" class="social"><i class="bi bi-skype"></i></a>
                 <a href="https://github.com/cooker0910" class="social"><i class="bi bi-github"></i></a>
-                <a href="mailto:cooker98910@gmail.com" class="social"><i class="bi bi-envelope"></i></a>
+                <a href="mailto:cooker0910@gmail.com" class="social"><i class="bi bi-envelope"></i></a>
               </div>
             </div>
           </div>
@@ -696,7 +645,7 @@
               </div>
               <div class="d-flex align-items-center mt-4">
                 <i class="bi bi-envelope"></i>
-                <p>cooker98910@gmail.com</p>
+                <p>cooker0910@gmail.com</p>
               </div>
             </div>
           </div>
@@ -735,8 +684,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
-
-<!-- Mirrored from ericchan.netlify.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jun 2022 15:23:18 GMT -->
-
 </html>
